--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21205,7 +21205,7 @@
       },
       "source": [
         "## Pertanyaan 3\n",
-        "10 orang dengan RFM tertinggi dan 10 dengan RFM terendah, serta akan dijabarkan RFM dari data 5 data random\n"
+        "10 orang dengan RFM tertinggi dan 10 dengan RFM terendah, serta akan dijabarkan RFM dari data 5 data teratas\n"
       ]
     },
     {
